--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -25,11 +25,15 @@ dependencies:
   cupertino_icons: ^0.1.2
   fluttertoast: ^3.1.0
   image_picker: ^0.6.1+3
+  json_annotation: ^3.0.0
+  http: ^0.12.0
+
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
-
+json_serializable: ^3.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
